feat: 基于umi-library

--- a/.gitignore
+++ b/.gitignore
@@ -1,28 +1,4 @@
-*.iml
-*.log
-.idea
-.ipr
-.iws
-*~
-~*
-*.diff
-*.patch
-*.bak
-.DS_Store
-Thumbs.db
-.project
-.*proj
-.svn
-*.swp
-*.swo
-*.pyc
-*.pyo
-node_modules
-.cache
-*.css
-build
-lib
-es
-coverage
-yarn.lock
-package-lock.json
+/node_modules
+/yarn.lock
+/dist
+/.docz
